--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "mint": "npx ts-node ./scripts/mint.ts",
     "drop": "npx ts-node ./scripts/drop.ts",
     "status": "npx ts-node ./scripts/status.ts",
-    "listen": "npx ts-node ./scripts/listenMint.ts",
-    "mint_nft": "npx ts-node scripts/mint_nft.ts"
+    "mint_nft": "npx ts-node scripts/mint_nft.ts",
+    "start": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' server/server.ts"
   },
   "author": "",
   "license": "ISC",
@@ -21,8 +21,15 @@
   "dependencies": {
     "@contextprotocol/sdk": "^1.1.1",
     "@openzeppelin/contracts": "^5.0.2",
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.14.9",
     "cli-spinners": "^3.1.0",
     "dotenv": "^16.4.5",
-    "ora": "^8.0.1"
+    "express": "^4.19.2",
+    "mongodb": "^6.8.0",
+    "nodemon": "^3.1.4",
+    "ora": "^8.0.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.5.3"
   }
 }
