--- a/data/config.json
+++ b/data/config.json
@@ -1,8 +1,8 @@
 {
-    "chainId": "42161",
+    "chainId": "8453",
     "name": "Alfamon",
     "symbol": "AFM",
-    "description": "Alfamon, The Game",
+    "description": "Alfamon, a Farcaster + Base Game",
     "path": "nft",
     "image": "cover.png",
     "webHookURL": "https://api.alfamon.xyz",
@@ -11,25 +11,21 @@
         "name": "incubate",
         "description": "Incubate your Alfamon, can be called once a day",
         "webhook_uri": "incubate"
+    }, {
+        "name": "follow",
+        "description": "Follow @cryptobenkei",
+        "webhook_uri": "checkFollow",
+        "caster": "cryptobenkei"
     }],
     "drops": {
         "gen0day1": {
             "name": "Alfamon - Gen0 - Day One",
-            "description": "First generation of Alfamons, Day One",
-            "qty": 10,
-            "price": "0.001",
+            "description": "Alfamon Generation Zero, Day One",
+            "qty": 100,
+            "price": "0.0005",
             "image": "cover.png",
             "nftName": "Alfamon #${tokenId}",
-            "nftDescription": "Alfamon ${tokenId} - The Egg",
-            "signer": "0x12E469d46cAF2555783D650e37beE6c4bC9D0631"
-        },"gen0day2": {
-            "name": "Alfamon - Gen0 - Day Two",
-            "description": "First generation of Alfamons, Day Two",
-            "qty": 10,
-            "price": "0.002",
-            "image": "cover.png",
-            "nftName": "Alfamon #${tokenId}",
-            "nftDescription": "Alfamon ${tokenId} - The Egg",
+            "nftDescription": "Alfamon number #${tokenId} - Egg from Day One",
             "signer": "0x12E469d46cAF2555783D650e37beE6c4bC9D0631"
         }
     }
