--- a/package.json
+++ b/package.json
@@ -9,14 +9,16 @@
     "mint": "npx ts-node ./scripts/mint.ts",
     "drop": "npx ts-node ./scripts/drop.ts",
     "status": "npx ts-node ./scripts/status.ts",
+    "cast": "npx ts-node ./scripts/cast.ts",
     "mint_nft": "npx ts-node scripts/mint_nft.ts",
     "pm2-start": "pm2 start ecosystem.config.cjs",
-    "start": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' server/server.ts"
+    "start": "nodemon --watch 'server/**/*.ts' --exec 'ts-node' server/server.ts"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
+    "@types/bull": "^4.10.0",
     "hardhat": "^2.22.6",
     "nodemon": "^3.1.4",
     "ts-node": "^10.9.2",
@@ -27,9 +29,12 @@
     "@openzeppelin/contracts": "^5.0.2",
     "@types/express": "^4.17.21",
     "@types/node": "^20.14.9",
+    "bullmq": "^5.10.0",
     "cli-spinners": "^3.1.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "ioredis": "^5.4.1",
+    "ioredis-mock": "^8.9.0",
     "mongodb": "^6.8.0",
     "ora": "^8.0.1"
   }
