--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "@contextprotocol/sdk": "^1.1.1",
+    "@neynar/nodejs-sdk": "^1.37.3",
     "@openzeppelin/contracts": "^5.0.2",
     "@types/express": "^4.17.21",
     "@types/node": "^20.14.9",
